[gd_scene load_steps=22 format=2]

[ext_resource path="res://Graphics/Windowskins/frlgtextskin.png" type="Texture2D" id=1]
[ext_resource path="res://Graphics/Pictures/selarrow.png" type="Texture2D" id=2]
[ext_resource path="res://Utilities/Battle/MoveTextFont.tres" type="FontFile" id=3]
[ext_resource path="res://Maps/MokiTown/FirstPokeLayer.gd" type="Script" id=4]
[ext_resource path="res://Graphics/Windowskins/skin1.png" type="Texture2D" id=5]
[ext_resource path="res://Graphics/Pictures/Starter/panel.png" type="Texture2D" id=6]
[ext_resource path="res://Graphics/Pictures/Starter/bg_grid.png" type="Texture2D" id=7]
[ext_resource path="res://Graphics/Pictures/Starter/bg_grid2.png" type="Texture2D" id=8]
[ext_resource path="res://Graphics/Pictures/Starter/bg_light.png" type="Texture2D" id=9]
[ext_resource path="res://Graphics/Battlers/003.png" type="Texture2D" id=10]
[ext_resource path="res://Graphics/Battlers/001.png" type="Texture2D" id=11]
[ext_resource path="res://Graphics/Battlers/005.png" type="Texture2D" id=12]
[ext_resource path="res://Maps/MokiTown/FadeIn.tres" type="Animation" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Slide"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 30 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 512, 384 ), Rect2( 512, 384, 512, 384 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slide"
length = 30.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 30 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 512, 384 ), Rect2( 512, 0, 512, 384 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Slide"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 8 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1536, 384 ), Rect2( 1536, 0, 1536, 384 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "FadeOut"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "FadeOut"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "FadeOut"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.25 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.25, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../PokeGet:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.25 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fadeout"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="FirstPokeLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Test" type="Node2D" parent="."]
visible = false

[node name="Box" type="NinePatchRect" parent="Test"]
offset_left = 10.0
offset_top = 146.0
offset_right = 500.0
offset_bottom = 274.0
texture = ExtResource( 1 )
region_rect = Rect2( 8, 2, 66, 74 )
patch_margin_left = 14
patch_margin_top = 14
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="Test/Box"]
offset_left = 12.0
offset_top = 14.0
offset_right = 24.0
offset_bottom = 42.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Label" parent="Test/Box"]
offset_left = 28.0
offset_top = 16.0
offset_right = 478.0
offset_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
text = "EVENT_MOKI_LAB_FIRST_POK_OPTION_3"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Option2" type="Label" parent="Test/Box"]
offset_left = 28.0
offset_top = 48.0
offset_right = 478.0
offset_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
text = "EVENT_MOKI_LAB_FIRST_POK_OPTION_3"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Option3" type="Label" parent="Test/Box"]
offset_left = 28.0
offset_top = 82.0
offset_right = 478.0
offset_bottom = 107.0
custom_fonts/font = ExtResource( 3 )
text = "EVENT_MOKI_LAB_FIRST_POK_OPTION_3"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="YesNo" type="Node2D" parent="."]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="YesNo"]
offset_left = 300.0
offset_top = 160.0
offset_right = 500.0
offset_bottom = 266.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="YesNo/NinePatchRect"]
offset_left = 30.0
offset_top = 20.0
offset_right = 426.0
offset_bottom = 46.0
custom_fonts/font = ExtResource( 3 )
text = "Yes!"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="YesNo/NinePatchRect"]
offset_left = 30.0
offset_top = 60.0
offset_right = 426.0
offset_bottom = 86.0
custom_fonts/font = ExtResource( 3 )
text = "Wait a minute..."
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="YesNo/NinePatchRect"]
offset_left = 14.0
offset_top = 18.0
offset_right = 26.0
offset_bottom = 46.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokeGet" type="Node2D" parent="."]
visible = false

[node name="BG" type="TextureRect" parent="PokeGet"]
offset_right = 512.0
offset_bottom = 384.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Grid" type="Sprite2D" parent="PokeGet"]
texture = ExtResource( 7 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 512, 384 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Grid"]
autoplay = "Slide"
anims/Slide = SubResource( 1 )

[node name="Grid2" type="Sprite2D" parent="PokeGet"]
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 512, 384 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Grid2"]
autoplay = "Slide"
anims/Slide = SubResource( 2 )

[node name="Light3D" type="Sprite2D" parent="PokeGet"]
texture = ExtResource( 9 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1536, 384 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Light3D"]
autoplay = "Slide"
anims/Slide = SubResource( 3 )

[node name="Orchynx" type="Sprite2D" parent="PokeGet"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 100, 170 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
hframes = 64

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Orchynx"]
anims/FadeIn = ExtResource( 13 )
anims/FadeOut = SubResource( 4 )

[node name="Electux" type="Sprite2D" parent="PokeGet"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 392, 170 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )
hframes = 68

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Electux"]
anims/FadeIn = ExtResource( 13 )
anims/FadeOut = SubResource( 5 )

[node name="Raptorch" type="Sprite2D" parent="PokeGet"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 246, 170 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )
hframes = 70

[node name="AnimationPlayer" type="AnimationPlayer" parent="PokeGet/Raptorch"]
anims/FadeIn = ExtResource( 13 )
anims/FadeOut = SubResource( 6 )

[node name="Tween" type="Tween" parent="PokeGet"]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
offset_right = 512.0
offset_bottom = 384.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/Fade = SubResource( 7 )
anims/Fadeout = SubResource( 8 )
